# Rust-Programming

Rust_Course_/: .gitattributes  .gitignore  Cargo.toml
Rust_Course_/Open_Data_Types/src/: main.rs
Rust_Course_/Vector_Folder/add_remove_elements/: Cargo.toml
Rust_Course_/basics/course_variables/: Cargo.toml
Rust_Course_/basics/open_data_types/: Cargo.toml
Rust_Course_/building_option_enum_from_scratch/: Cargo.toml
Rust_Course_/building_option_enum_from_scratch/src/: main.rs
Rust_Course_/closures/closure_shortcuts/: Cargo.toml
Rust_Course_/closures/closure_that_captures_immut_ref/: Cargo.toml
Rust_Course_/closures/closure_that_captures_mut_ref/: Cargo.toml
Rust_Course_/closures/closures_with_ownership/: Cargo.toml
Rust_Course_/closures/define_method_that_accepts_closure/: Cargo.toml
Rust_Course_/closures/define_method_that_accepts_closure_2/: Cargo.toml
Rust_Course_/closures/fn_trait_hierachy/: Cargo.toml
Rust_Course_/closures/intro_to_closures/: Cargo.toml
Rust_Course_/closures/nested_functions/: Cargo.toml
Rust_Course_/closures/passing_function_to_fn_trait_param/: Cargo.toml
Rust_Course_/closures/project_closures/: Cargo.toml
Rust_Course_/closures/the_fn_trait/: Cargo.toml
Rust_Course_/closures/the_move_keyword/: Cargo.toml
Rust_Course_/closures/the_string_retain_method/: Cargo.toml
Rust_Course_/closures/unwrap_or_else_method/: Cargo.toml
Rust_Course_/control_flow_project/: Cargo.toml
Rust_Course_/defining_methods_on_enums/: Cargo.toml
Rust_Course_/defining_methods_on_enums/src/: main.rs
Rust_Course_/enum_if_let_construct/src/: main.rs
Rust_Course_/enum_let_else_construct/: Cargo.toml
Rust_Course_/enum_match_keyword/: Cargo.toml
Rust_Course_/enum_match_keyword_2/: Cargo.toml
Rust_Course_/enum_match_keyword_4/: Cargo.toml
Rust_Course_/enum_match_keyword_4/src/: main.rs
Rust_Course_/enum_match_keyword_5/: Cargo.toml
Rust_Course_/enum_match_keyword_5/src/: main.rs
Rust_Course_/enum_with_assoc_function/src/: main.rs
Rust_Course_/enum_with_assoc_values/src/: main.rs
Rust_Course_/enums/enum_if_let_construct/: Cargo.toml
Rust_Course_/enums/enum_match_keyword_3/: Cargo.toml
Rust_Course_/enums/enum_with_assoc_values/: Cargo.toml
Rust_Course_/enums/enum_with_assoc_values_2/: Cargo.toml
Rust_Course_/enums/intro_to_enums/: Cargo.toml
Rust_Course_/enums/nesting_enums/: Cargo.toml
Rust_Course_/error_handling/opening_a_file/: Cargo.toml
Rust_Course_/error_handling/process_mod_exit_func/: Cargo.toml
Rust_Course_/error_handling/the_try_operator/: Cargo.toml
Rust_Course_/error_handling/using_try_with_option/: Cargo.toml
Rust_Course_/errror_handling/: story.txt
Rust_Course_/errror_handling/asking_user_input/: Cargo.toml
Rust_Course_/errror_handling/error_handling_project/: story.txt
Rust_Course_/errror_handling/opening_a_file/: story.txt
Rust_Course_/errror_handling/read_file_content/: Cargo.toml
Rust_Course_/errror_handling/read_to_str_assoc_fn/: Cargo.toml
Rust_Course_/errror_handling/standard_error/: Cargo.toml
Rust_Course_/functions/src/: main.rs
Rust_Course_/generic_and_impl_blocks_1/: Cargo.toml
Rust_Course_/generic_and_impl_blocks_2/: Cargo.toml
Rust_Course_/generics/turbofish_operator/: Cargo.toml
Rust_Course_/generics_in_enums/: Cargo.toml
Rust_Course_/generics_in_enums/src/: main.rs
Rust_Course_/generics_in_structs/: Cargo.toml
Rust_Course_/generics_project/src/: main.rs
Rust_Course_/get_method_on_an_Array/src/: main.rs
Rust_Course_/hashMaps/access_value_by_key/: Cargo.toml
Rust_Course_/hashMaps/hahset_operations/: Cargo.toml
Rust_Course_/hashMaps/hashaps_and_ownership/: Cargo.toml
Rust_Course_/hashMaps/hashmap_with_new_fn/: Cargo.toml
Rust_Course_/hashMaps/overwriting_val_with_existing_key/: Cargo.toml
Rust_Course_/hashMaps/project_hashmap/: Cargo.toml
Rust_Course_/hashMaps/the_entry_method/: Cargo.toml
Rust_Course_/hashMaps/the_remove_method/: Cargo.toml
Rust_Course_/intro_to_enums/src/: main.rs
Rust_Course_/intro_to_generics/: Cargo.toml
Rust_Course_/iterations/command_line_argument_2/: Cargo.toml
Rust_Course_/iterations/command_line_arguments_1/: Cargo.toml
Rust_Course_/iterations/exhausting_the_iterator/: Cargo.toml
Rust_Course_/iterations/hash_map_iteration/: Cargo.toml
Rust_Course_/iterations/into_iterator_in_action/: Cargo.toml
Rust_Course_/iterations/iteration_project/: Cargo.toml
Rust_Course_/iterations/manual_iteration/: Cargo.toml
Rust_Course_/iterations/project_wordle/: Cargo.toml
Rust_Course_/iterations/reading_directory/: Cargo.toml
Rust_Course_/iterations/solving_problem_with_iteration/: Cargo.toml
Rust_Course_/iterations/sort_and_sortby_key_method/: Cargo.toml
Rust_Course_/iterations/string_iteration/: Cargo.toml
Rust_Course_/iterations/sum_prod_max_min_count/: Cargo.toml
Rust_Course_/iterations/the_any_and_all_methods/: Cargo.toml
Rust_Course_/iterations/the_cloned_method/: Cargo.toml
Rust_Course_/iterations/the_collect_method/: Cargo.toml
Rust_Course_/iterations/the_enumerate_method/: Cargo.toml
Rust_Course_/iterations/the_filter_and_find_methods/: Cargo.toml
Rust_Course_/iterations/the_filter_and_find_methods_2/: Cargo.toml
Rust_Course_/iterations/the_filter_map_method/: Cargo.toml
Rust_Course_/iterations/the_flat_map_method/: Cargo.toml
Rust_Course_/iterations/the_flatten_method/: Cargo.toml
Rust_Course_/iterations/the_fold_method/: Cargo.toml
Rust_Course_/iterations/the_for_each_method/: Cargo.toml
Rust_Course_/iterations/the_for_loop_with_iterator/: Cargo.toml
Rust_Course_/iterations/the_fromIterator_trait/: Cargo.toml
Rust_Course_/multiple_tuple/: Cargo.toml
Rust_Course_/opt_and_res_enum_project/: Cargo.toml
Rust_Course_/references_and_borrowing_project/: Cargo.toml
Rust_Course_/struct_variants_in_enums/: Cargo.toml
Rust_Course_/structs_project/: Cargo.toml
Rust_Course_/the_match_keyword_with/: Cargo.toml
Rust_Course_/the_result_enum/: Cargo.toml
Rust_Course_/the_unwrap_or_method/: Cargo.toml
Rust_Course_/the_while_let_construct/: Cargo.toml
(+294 files in other folders)
